feat(CS): EC key support for global configuration
it passes E2E tests

Refs: XRDDEV-2695